# shumi-chess

./: .gitignore  BadFENPositions.txt  Board.cpp  Board.hpp  CMakeLists.txt  Gameboard.cpp  README.md  Shumi_games_with_others.txt  Untitled-1 - Copy.cpp  Untitled-1.cpp  build-and-run.ps1  build_python_module_run.ps1  build_python_module_run.sh  build_unittests_driver.sh  dog.txt  engine.hpp  helpers.py  helpme.txt  requirements.txt  shumi_fens.txt  shumi_vs_sf2300.pgn  summary.txt  uci_debug.txt
doc/: BadFENPositions.txt  EnPassant.txt  Shumi_games_with_others.txt  Untitled-1.cpp  Untitled-1.txt  _DEBUGGING_MOVE_CHAIN.txt  afterStorage.txt  beforeStorage.txt  brainStorm.md  class_diagram.puml  dfdfddfdf.txt  minimax - Copy.cpp  negamax.md  phase_notes.txt  players.md  quiescence.md  summary.txt  temp.txt
driver/: Features.py  build_c_module_for_minimax.py  build_c_module_for_python.py  compare_fen_files.py  cutechess_all.txt  cutechess_driver1.bat  cutechess_errors.txt  cutechess_log.txt  driver.cpp  engine_communicatormodule.cpp  games_per_second.py  laser_client.py  measure_speed_random_games.cpp  minimax_aimodule.cpp  modified_graphics.py  show_board.py  shumi_uci.cpp  shumi_vs_sf2300.pgn
googletest_cmake/: googletest-download.cmake  googletest.cmake
gtests/: CMakeLists.txt  CMakeLists.txt.in  tGameboard.cpp  tutils.cpp  tvalid_moves.cpp
scripts/: build_debug_run_gui.sh  build_debug_run_unittests.sh  build_release_minimax_ai_run_gui.sh  build_release_run_gui.sh  build_release_run_minimax_at_depth_perf.sh  build_release_run_random_benchmark.sh  build_release_run_random_benchmark_with_perf.sh  callgrind_minimax.py  callgrind_random.py  helpers.py  minimax_ai_run_gui.sh  perf_minimax.py  perf_speed_random.py  run_gui.py  run_gui.sh  run_laser_server.py  run_minimax_at_depth_gperf.sh  run_tests.py  run_unittests.sh  shared_build_code.py  speed_random.py  win_build_debug_minimax_ai_run_gui.ps1  win_build_debug_run_gui.ps1  win_build_debug_tests.ps1  win_build_release_minimax_ai_run_gui.ps1  win_minimax_ai_run_gui.ps1  win_run_gui.ps1  win_run_tests.ps1
sparsepp/: CMakeLists.txt
sparsepp/sparsepp-prefix/src/sparsepp-stamp/: sparsepp-gitinfo.txt  sparsepp-update-info.txt
sparsepp/sparsepp-prefix/tmp/: sparsepp-gitclone.cmake  sparsepp-gitupdate.cmake  sparsepp-mkdirs.cmake
sparsepp_cmake/: sparsepp-download.cmake  sparsepp.cmake
src/: Features.hpp  Gameboard.cpp  Gameboard.hpp  Untitled-1.cpp  Weights.cpp  endgameTables.hpp  engine.cpp  engine.hpp  features.h  gameboard.cpp  gameboard.hpp  gameboardSetup.hpp  gameboardSetup.inc  globals.cpp  globals.hpp  minimax.aaa  minimax.cpp  minimax.hpp  move_tables.cpp  move_tables.hpp  run_minimax_depth.cpp  run_minimax_time.cpp  salt.h  score.hpp  typedef.hpp  uci.cpp  utility.cpp  utility.hpp  weights.cpp  weights.hpp
tests/: CMakeLists.txt  tGameboard.cpp  tengine.cpp  test_helper_fcns.hpp  tgameboard.cpp  tutils.cpp  tvalid_moves.cpp
tests/generate_test_data/: generate_depth_test_data.py  generate_legal_positions_by_depth.py
